--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             style="max-width: 700px"
           >
             <h1 class="display-5 fw-normal">
-              Turn your XML file into a queryable data table - Instantly!
+              Turn your XML file into a tabular dataset
             </h1>
             <p class="fs-5 text-muted">
               Quickly search through the data or save the XML file as CSV for
@@ -140,9 +140,7 @@
           </div>
 
           <div class="mt-1">
-            <h2 class="display-6 text-center">
-              View your XML as a dataset ... and more!
-            </h2>
+            <h2 class="display-6 text-center">View a Live Demo</h2>
           </div>
 
           <div class="my-3">
