Added GitHub Repository Hotlinks

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
+
+    <!-- Github Buttons -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
   <body>
@@ -55,6 +58,28 @@
           <!-- Navigation Link Buttons Start-->
           <div class="collapse navbar-collapse" id="hamburger">
             <a class="navbar-brand" href="#">XML Tables</a>
+
+            <div class="mt-1 me-auto">
+              <!-- Place this tag where you want the button to render. -->
+
+              <iframe
+                src="https://ghbtns.com/github-btn.html?user=mar1boroman&type=follow&count=true&size=large"
+                frameborder="0"
+                scrolling="0"
+                width="230"
+                height="30"
+                title="GitHub"
+              ></iframe>
+
+              <iframe
+                src="https://ghbtns.com/github-btn.html?user=mar1boroman&repo=mar1boroman.github.io&type=star&count=true&size=large"
+                frameborder="0"
+                scrolling="0"
+                width="170"
+                height="30"
+                title="GitHub"
+              ></iframe>
+            </div>
 
             <ul class="nav navbar-nav ms-auto">
               <li class="nav-item">
