Added meta description tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <title>XML Tables</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
-
+    <meta
+      name="google-site-verification"
+      content="6k_e6GrxM8Y7qymQuSLVDWXH3vg29vjLjXNWSFbUHUE"
+    />
+    <meta
+      description="description"
+      content="Convert your local XML file into a HTML table, instantly search tabular data and visualize using d3 force graphs"
+    />
     <!-- Bootstrap core CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
