--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="6k_e6GrxM8Y7qymQuSLVDWXH3vg29vjLjXNWSFbUHUE" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
